--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -6,43 +6,79 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 
-<!-- Firebase SDK -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+import { getFirestore, doc, getDoc, collection, getDocs, query, where } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
+// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
   authDomain: "my-school-st-paul-1455a.firebaseapp.com",
   projectId: "my-school-st-paul-1455a",
 };
 
+// Initialize
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
+const db = getFirestore(app);
 
-const linksSection = document.getElementById("student-links");
-const welcomeMsg = document.getElementById("welcome-msg");
-const notSignedMsg = document.getElementById("not-signed-msg");
-
-// Protect page & show links dynamically
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    // Not signed in
-    linksSection.style.display = "none";
-    notSignedMsg.textContent = "❌ Please register or log in to access Timetable, Homework, and Notes.";
+// Protect page and load student data
+onAuthStateChanged(auth, async user => {
+  if(!user) {
+    window.location.href = "register.html"; // Not signed in
   } else {
-    // Signed in
-    notSignedMsg.style.display = "none";
-    linksSection.style.display = "block";
-    welcomeMsg.textContent = `Welcome, ${user.email}! 🎉`;
+    const studentDoc = await getDoc(doc(db, "students", user.uid));
+    if(!studentDoc.exists()) {
+      alert("You are not registered. Please register first.");
+      auth.signOut();
+      window.location.href = "register.html";
+    } else {
+      const data = studentDoc.data();
+      document.getElementById("welcome").textContent = `Welcome, ${data.fullname}!`;
+
+      // Load timetable
+      const timetableCol = collection(db, "timetables");
+      const timetableQuery = query(timetableCol, where("grade", "==", data.grade));
+      const timetableSnap = await getDocs(timetableQuery);
+      const timetableList = document.getElementById("timetable");
+      timetableSnap.forEach(doc => {
+        const item = doc.data();
+        const li = document.createElement("li");
+        li.textContent = `${item.day}: ${item.subject} (${item.time})`;
+        timetableList.appendChild(li);
+      });
+
+      // Load notes
+      const notesCol = collection(db, "notes");
+      const notesQuery = query(notesCol, where("grade", "==", data.grade));
+      const notesSnap = await getDocs(notesQuery);
+      const notesList = document.getElementById("notes");
+      notesSnap.forEach(doc => {
+        const note = doc.data();
+        const li = document.createElement("li");
+        li.textContent = `${note.subject}: ${note.title}`;
+        notesList.appendChild(li);
+      });
+
+      // Load homework
+      const homeworkCol = collection(db, "homework");
+      const homeworkQuery = query(homeworkCol, where("grade", "==", data.grade));
+      const homeworkSnap = await getDocs(homeworkQuery);
+      const homeworkList = document.getElementById("homework");
+      homeworkSnap.forEach(doc => {
+        const hw = doc.data();
+        const li = document.createElement("li");
+        li.textContent = `${hw.subject}: ${hw.task} (Due: ${hw.dueDate})`;
+        homeworkList.appendChild(li);
+      });
+    }
   }
 });
 
-// Logout function
+// Logout
 window.logout = () => {
-  signOut(auth).then(() => {
-    window.location.href = "register.html";
-  });
+  signOut(auth).then(() => window.location.href = "register.html");
 };
 </script>
 </head>
@@ -61,19 +97,20 @@ window.logout = () => {
   <a href="showcase.html">About Us</a>
   <a href="contact.html">Contact</a>
   <a href="parent-portal.html">Parent Portal</a>
-  <a href="#" onclick="logout()">Logout</a>
+  <button onclick="logout()" style="float:right;">Logout</button>
 </nav>
 
 <section>
-  <h2>Student Dashboard</h2>
-  <p id="welcome-msg" style="font-weight:bold; color:green;"></p>
-  <p id="not-signed-msg" style="color:red; font-weight:bold;"></p>
+  <h2 id="welcome">Welcome!</h2>
 
-  <ul id="student-links" class="student-links" style="display:none;">
-    <li><a href="timetable.html">📅 Timetable</a></li>
-    <li><a href="homework.html">📝 Homework</a></li>
-    <li><a href="notes.html">📚 Notes</a></li>
-  </ul>
+  <h3>📅 Timetable</h3>
+  <ul id="timetable"></ul>
+
+  <h3>📘 Notes</h3>
+  <ul id="notes"></ul>
+
+  <h3>📝 Homework</h3>
+  <ul id="homework"></ul>
 </section>
 
 <footer>
