--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -1,120 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Student Dashboard - St Paul Learning Centre</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-import { getFirestore, doc, getDoc, collection, getDocs, query, where } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
-// Firebase config
-const firebaseConfig = {
-  apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
-  authDomain: "my-school-st-paul-1455a.firebaseapp.com",
-  projectId: "my-school-st-paul-1455a",
-};
-
-// Initialize
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
-
-// Protect page and load student data
-onAuthStateChanged(auth, async user => {
-  if(!user) {
-    window.location.href = "register.html"; // Not signed in
-  } else {
-    const studentDoc = await getDoc(doc(db, "students", user.uid));
-    if(!studentDoc.exists()) {
-      alert("You are not registered. Please register first.");
-      auth.signOut();
-      window.location.href = "register.html";
-    } else {
-      const data = studentDoc.data();
-      document.getElementById("welcome").textContent = `Welcome, ${data.fullname}!`;
-
-      // Load timetable
-      const timetableCol = collection(db, "timetables");
-      const timetableQuery = query(timetableCol, where("grade", "==", data.grade));
-      const timetableSnap = await getDocs(timetableQuery);
-      const timetableList = document.getElementById("timetable");
-      timetableSnap.forEach(doc => {
-        const item = doc.data();
-        const li = document.createElement("li");
-        li.textContent = `${item.day}: ${item.subject} (${item.time})`;
-        timetableList.appendChild(li);
-      });
-
-      // Load notes
-      const notesCol = collection(db, "notes");
-      const notesQuery = query(notesCol, where("grade", "==", data.grade));
-      const notesSnap = await getDocs(notesQuery);
-      const notesList = document.getElementById("notes");
-      notesSnap.forEach(doc => {
-        const note = doc.data();
-        const li = document.createElement("li");
-        li.textContent = `${note.subject}: ${note.title}`;
-        notesList.appendChild(li);
-      });
-
-      // Load homework
-      const homeworkCol = collection(db, "homework");
-      const homeworkQuery = query(homeworkCol, where("grade", "==", data.grade));
-      const homeworkSnap = await getDocs(homeworkQuery);
-      const homeworkList = document.getElementById("homework");
-      homeworkSnap.forEach(doc => {
-        const hw = doc.data();
-        const li = document.createElement("li");
-        li.textContent = `${hw.subject}: ${hw.task} (Due: ${hw.dueDate})`;
-        homeworkList.appendChild(li);
-      });
+  <meta charset="UTF-8">
+  <title>Student Dashboard - St Paul Learning Centre</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .dashboard-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+      flex-wrap: wrap;
     }
-  }
-});
+    .dashboard-buttons a {
+      display: inline-block;
+      padding: 30px 50px;
+      text-align: center;
+      background-color: #0077cc;
+      color: #fff;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 12px;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+    .dashboard-buttons a:hover {
+      background-color: #005fa3;
+    }
+    .welcome-message {
+      text-align: center;
+      font-size: 24px;
+      margin-top: 20px;
+      font-weight: 600;
+    }
+  </style>
 
-// Logout
-window.logout = () => {
-  signOut(auth).then(() => window.location.href = "register.html");
-};
-</script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+      authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+      projectId: "my-school-st-paul-1455a",
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    const welcomeEl = document.getElementById("welcome");
+    const homeworkBtn = document.getElementById("homework-btn");
+    const notesBtn = document.getElementById("notes-btn");
+    const timetableBtn = document.getElementById("timetable-btn");
+
+    // Redirect to grade-specific pages
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        window.location.href = "login.html"; // redirect if not signed in
+      } else {
+        // Get student info from Firestore
+        const studentRef = doc(db, "students", user.uid);
+        const studentSnap = await getDoc(studentRef);
+        if (studentSnap.exists()) {
+          const studentData = studentSnap.data();
+          welcomeEl.textContent = `🎉 Welcome, ${studentData.fullname}!`;
+
+          const grade = studentData.grade;
+          // Set links based on grade
+          homeworkBtn.href = `homework-grade${grade}.html`;
+          notesBtn.href = `notes-grade${grade}.html`;
+          timetableBtn.href = `timetable-grade${grade}.html`;
+        } else {
+          welcomeEl.textContent = `🎉 Welcome, ${user.email}!`;
+          // Default links if no data
+          homeworkBtn.href = "homework.html";
+          notesBtn.href = "notes.html";
+          timetableBtn.href = "timetable.html";
+        }
+      }
+    });
+  </script>
 </head>
 <body>
-<header>
-  <h1>St Paul Learning Centre</h1>
-  <div class="motto">Strive For Success</div>
-  <p>Empowering students, connecting families, supporting teachers.</p>
-</header>
+  <header>
+    <h1>St Paul Learning Centre</h1>
+    <div class="motto">Strive For Success</div>
+    <p>Empowering students, connecting families, supporting teachers.</p>
+  </header>
 
-<nav>
-  <a href="index.html">News & Announcements</a>
-  <a href="student-portal.html">Student Portal</a>
-  <a href="admissions.html">Admissions</a>
-  <a href="resources.html">Resources</a>
-  <a href="showcase.html">About Us</a>
-  <a href="contact.html">Contact</a>
-  <a href="parent-portal.html">Parent Portal</a>
-  <button onclick="logout()" style="float:right;">Logout</button>
-</nav>
+  <nav>
+    <a href="index.html">News & Announcements</a>
+    <a href="student-portal.html">Student Portal</a>
+    <a href="admissions.html">Admissions</a>
+    <a href="resources.html">Resources</a>
+    <a href="showcase.html">About Us</a>
+    <a href="contact.html">Contact</a>
+    <a href="parent-portal.html">Parent Portal</a>
+  </nav>
 
-<section>
-  <h2 id="welcome">Welcome!</h2>
+  <section>
+    <div id="welcome" class="welcome-message"></div>
+    <div class="dashboard-buttons">
+      <a id="homework-btn" href="#">Homework</a>
+      <a id="notes-btn" href="#">Notes</a>
+      <a id="timetable-btn" href="#">Timetable</a>
+    </div>
+  </section>
 
-  <h3>📅 Timetable</h3>
-  <ul id="timetable"></ul>
-
-  <h3>📘 Notes</h3>
-  <ul id="notes"></ul>
-
-  <h3>📝 Homework</h3>
-  <ul id="homework"></ul>
-</section>
-
-<footer>
-  &copy; 2025 St Paul Learning Centre. All rights reserved.
-</footer>
+  <footer>
+    &copy; 2025 St Paul Learning Centre. All rights reserved.
+  </footer>
 </body>
-</html>
+        </html>
