--- a/notes.html
+++ b/notes.html
@@ -13,14 +13,18 @@
     <p>Empowering students, connecting families, supporting teachers.</p>
   </header>
 
-  <nav>
-    <a href="student-dashboard.html">Dashboard</a>
-    <a href="timetable.html">Timetable</a>
-    <a href="notes.html">Notes</a>
-    <a href="homework.html">Homework</a>
-    <a href="logout.html">Logout</a>
+  nav id="sideMenu" class="side-menu">
+      <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
+      <a href="index.html">News & Announcements</a>
+      <a href="student-portal.html">Student Portal</a>
+      <a href="admissions.html">Admissions</a>
+      <a href="resources.html">Resources</a>
+      <a href="showcase.html">Showcase</a>
+      <a href="contact.html">Contact</a>
+      <a href="timetable.html">Timetable</a>
+      <a href="teacher-resources.html">Teacher Resources</a>
+      <a href="parent-portal.html">Parent Portal</a>
   </nav>
-
   <section>
     <h2>📘 Class Notes</h2>
     <ul>
