--- a/exams.html
+++ b/exams.html
@@ -40,16 +40,18 @@
         <p>Empowering students, connecting families, supporting teachers.</p>
     </header>
 
-    <nav>
-        <a href="index.html">News & Announcements</a>
-        <a href="student-portal.html">Student Portal</a>
-        <a href="admissions.html">Admissions</a>
-        <a href="resources.html">Resources</a>
-        <a href="showcase.html">About Us</a>
-        <a href="contact.html">Contact</a>
-        <a href="parent-portal.html">Parent Portal</a>
-    </nav>
-
+    nav id="sideMenu" class="side-menu">
+      <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
+      <a href="index.html">News & Announcements</a>
+      <a href="student-portal.html">Student Portal</a>
+      <a href="admissions.html">Admissions</a>
+      <a href="resources.html">Resources</a>
+      <a href="showcase.html">Showcase</a>
+      <a href="contact.html">Contact</a>
+      <a href="timetable.html">Timetable</a>
+      <a href="teacher-resources.html">Teacher Resources</a>
+      <a href="parent-portal.html">Parent Portal</a>
+  </nav>
     <section>
         <h2>Exam Schedules</h2>
         <p>Check out upcoming exam dates and download schedules for all grades.</p>
