--- a/admissions.html
+++ b/admissions.html
@@ -46,7 +46,8 @@
    <p>Empowering students, connecting families, supporting teachers.</p>
 </header>
 
-nav id="sideMenu" class="side-menu">
+<!-- Corrected Navbar -->
+<nav id="sideMenu" class="side-menu">
       <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
       <a href="index.html">News & Announcements</a>
       <a href="student-portal.html">Student Portal</a>
@@ -57,7 +58,8 @@ nav id="sideMenu" class="side-menu">
       <a href="timetable.html">Timetable</a>
       <a href="teacher-resources.html">Teacher Resources</a>
       <a href="parent-portal.html">Parent Portal</a>
-  </nav>
+</nav>
+
 <section>
    <h2>Online Admission Form</h2>
    <form class="admission-form" id="admissionForm">
