--- a/timetable.html
+++ b/timetable.html
@@ -1,55 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Timetable - St Paul Learning Centre</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Timetable - St Paul Learning Centre</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>St Paul Learning Centre</h1>
-    <div class="motto">Strive For Success</div>
-    <p>Empowering students, connecting families, supporting teachers.</p>
-  </header>
 
-  nav id="sideMenu" class="side-menu">
-      <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
-      <a href="index.html">News & Announcements</a>
-      <a href="student-portal.html">Student Portal</a>
-      <a href="admissions.html">Admissions</a>
-      <a href="resources.html">Resources</a>
-      <a href="showcase.html">Showcase</a>
-      <a href="contact.html">Contact</a>
-      <a href="teacher-resources.html">Teacher Resources</a>
-      <a href="parent-portal.html">Parent Portal</a>
-  </nav>
-  <section>
-    <h2>📅 Weekly Timetable</h2>
-    <table border="1" cellpadding="10">
-      <tr>
-        <th>Day</th><th>8:00 - 10:00</th><th>10:30 - 12:30</th><th>2:00 - 4:00</th>
-      </tr>
-      <tr>
-        <td>Monday</td><td>Mathematics</td><td>English</td><td>Science</td>
-      </tr>
-      <tr>
-        <td>Tuesday</td><td>History</td><td>Geography</td><td>ICT</td>
-      </tr>
-      <tr>
-        <td>Wednesday</td><td>Mathematics</td><td>Biology</td><td>Sports</td>
-      </tr>
-      <tr>
-        <td>Thursday</td><td>English</td><td>Chemistry</td><td>Music</td>
-      </tr>
-      <tr>
-        <td>Friday</td><td>Physics</td><td>Art</td><td>Debate Club</td>
-      </tr>
-    </table>
-  </section>
+<!-- Top Navbar -->
+<div class="navbar">
+  <span class="menu-btn" onclick="openMenu()">&#9776;</span>
+  <div class="navbar-center">
+    <img src="logo.png" alt="School Logo" class="school-logo">
+    <span class="logo-text">St Paul Learning Centre</span>
+  </div>
+</div>
 
-  <footer>
-    &copy; 2025 St Paul Learning Centre. All rights reserved.
-  </footer>
+<!-- Sidebar Menu -->
+<nav id="sideMenu" class="side-menu">
+  <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
+  <a href="index.html">News & Announcements</a>
+  <a href="student-portal.html">Student Portal</a>
+  <a href="admissions.html">Admissions</a>
+  <a href="resources.html">Resources</a>
+  <a href="showcase.html">Showcase</a>
+  <a href="contact.html">Contact</a>
+  <a href="timetable.html">Timetable</a>
+  <a href="teacher-resources.html">Teacher Resources</a>
+  <a href="parent-portal.html">Parent Portal</a>
+</nav>
+
+<!-- Main Section -->
+<section>
+  <h2>📅 Weekly Timetable</h2>
+  <table border="1" cellpadding="10" style="width:100%; border-collapse: collapse;">
+    <tr>
+      <th>Day</th>
+      <th>8:00 - 10:00</th>
+      <th>10:30 - 12:30</th>
+      <th>2:00 - 4:00</th>
+    </tr>
+    <tr>
+      <td>Monday</td><td>Mathematics</td><td>English</td><td>Science</td>
+    </tr>
+    <tr>
+      <td>Tuesday</td><td>History</td><td>Geography</td><td>ICT</td>
+    </tr>
+    <tr>
+      <td>Wednesday</td><td>Mathematics</td><td>Biology</td><td>Sports</td>
+    </tr>
+    <tr>
+      <td>Thursday</td><td>English</td><td>Chemistry</td><td>Music</td>
+    </tr>
+    <tr>
+      <td>Friday</td><td>Physics</td><td>Art</td><td>Debate Club</td>
+    </tr>
+  </table>
+</section>
+
+<footer>
+  &copy; 2025 St Paul Learning Centre. All rights reserved.
+</footer>
+
+<script>
+function openMenu() {
+  document.getElementById("sideMenu").style.width = "280px";
+}
+function closeMenu() {
+  document.getElementById("sideMenu").style.width = "0";
+}
+</script>
+
 </body>
 </html>
